--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "^25.0.0",
     "react": "16.2.0",
     "react-native": "0.52.0",
+    "react-native-check-box": "^2.1.0",
     "react-navigation": "^1.5.8"
   }
 }
