--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "preset": "jest-expo"
   },
   "rnpm": {
-  "assets": ["./src/assets"]
-},
+    "assets": [
+      "./src/assets"
+    ]
+  },
   "dependencies": {
     "expo": "^25.0.0",
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-material-ui": "^1.20.0",
+    "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.5.8"
   }
 }
